Finishing css and calling the API

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="author" content="SitePoint">
 
 
-    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta property="og:title" content="App meteo">
     <meta property="og:type" content="website">
     <meta property="og:url" content="#">
-    <meta property="og:description" content="A simple HTML5 Template for new projects.">
+    <meta property="og:description" content="Meteo app for js training">
     <meta property="og:image" content="//Insert img here//">
 
     <link rel="icon" type="image/svg+xml"
@@ -42,10 +42,6 @@
         </div>
 
         <div class="heure-bloc-prevision">
-            <div class="bloc-h">
-                <p class="heure-nom-prevision"></p>
-                <p class="heure-prevision-valeur"></p>
-            </div>
             <div class="bloc-h">
                 <p class="heure-nom-prevision"></p>
                 <p class="heure-prevision-valeur"></p>
@@ -105,15 +101,12 @@
                 <p class="jour-prevision-nom"></p>
                 <p class="jour-prevision-temp"></p>
             </div>
-            <div class="bloc-j">
-                <p class="jour-prevision-nom"></p>
-                <p class="jour-prevision-temp"></p>
-            </div>
         </div>
     </div>
 
 
     <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
