--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <img src="./ressources/jour/04d.svg" class="meteo" alt=" logo du temps qu'il fait">
             </div>
             <div class="bloc-info">
-                <p class="temps">Couvert</p>
-                <p class="temperature">15°</p>
-                <p class="localisation">Marseille</p>
+                <p class="temps"></p>
+                <p class="temperature"></p>
+                <p class="localisation"></p>
             </div>
         </div>
 
@@ -103,7 +103,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="app.js"></script>
     <script src="main.js"></script>
