--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
