adding dynamic images+prevision des jours + loader

--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
     <!-- your content here... -->
 
     <div class="container">
+
+        <div class="overlay-icone-chargement">
+            <img src="ressources/chargement/circles.svg" alt="logo-chargement">
+        </div>
+
         <h1>Application Meteo</h1>
         <div class="bloc-logo-info">
             <div class="bloc-logo">
-                <img src="./ressources/jour/04d.svg" class="meteo" alt=" logo du temps qu'il fait">
+                <img src="./ressources/jour/04d.svg" class="logo-meteo" alt=" logo du temps qu'il fait">
             </div>
             <div class="bloc-info">
                 <p class="temps"></p>
